--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
         <script type="text/jsx">
-            const app = document.getElementById('app');
+            =const app = document.getElementById('app');
 
-            function Header() {
-                return <h1>Develop. Preview. Ship.</h1>;
+            function Header({ title }) {
+                return <h1>{title ? title : 'Default Title'}</h1>;
             }
 
-            const root = ReactDOM.createRoot(app);
-            root.render(<Header />);
+            function HomePage() {
+                const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+                return (
+                    <div>
+                        /* Nesting the Header Component */
+                        <Header title="React" />
+                        <ul>
+                            {names.map((name) => (
+                                <li>{name}</li>
+                            ))}
+                        </ul>
+                    </div>
+                );
+            }
+
+            const root = ReactDom.createRoot(app);
+            root.render(<HomePage />);
         </script>
     </body>
 </html>
