--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
-    <body>
-        <div id="app">
-        </div>
-            <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+
+<body>
+    <div id="app">
+    </div>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- Babel Script -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-        <script type="text/jsx">
-            =const app = document.getElementById('app');
+    <script type="text/jsx">
+            const app = document.getElementById('app');
 
             function Header({ title }) {
                 return <h1>{title ? title : 'Default Title'}</h1>;
@@ -16,19 +18,20 @@
                 const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
                 return (
                     <div>
-                        /* Nesting the Header Component */
+                        {/* Nesting the Header Component */}
                         <Header title="React" />
                         <ul>
                             {names.map((name) => (
-                                <li>{name}</li>
+                                <li key={name}>{name}</li>
                             ))}
                         </ul>
                     </div>
                 );
             }
 
-            const root = ReactDom.createRoot(app);
+            const root = ReactDOM.createRoot(app);
             root.render(<HomePage />);
-        </script>
-    </body>
+    </script>
+</body>
+
 </html>
