--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
             function HomePage() {
                 const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+                const [likesValue, setLikesValue] = React.useState(0); {/* This is [variable, updateFunction] = [value, update()] basically, and 0 there is setting the initial value */}
+
+                function handleClick() {
+                    setLikesValue(likesValue + 1);
+                }
+
                 return (
                     <div>
                         {/* Nesting the Header Component */}
@@ -25,6 +31,7 @@
                                 <li key={name}>{name}</li>
                             ))}
                         </ul>
+                        <button onClick={handleClick}>Like({likesValue})</button>
                     </div>
                 );
             }
